[tool.poetry]
name = "python-learn"
version = "1.0.0"
description = "python snippets and codes to explain CS concepts"
authors = ["Hammad, Daniyal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
